ai/gateway/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jwt
  namespace: traefik
spec:
  plugin:
    jwt:
      signingSecret: ${JWTKEY}
      claims: Equals(`group`, `admin`)
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: drl
  namespace: traefik
spec:
  plugin:
    distributedRateLimit:
      responseHeaders: true
      period: 30s
      limit: 5
      burst: 5
      store:
        redis:
          endpoints:
            - redis-master.redis.svc.cluster.local:6379
